b=379474, borders render incorrectly when using moz-border-radius (also 379446, hr noshade renders incorrectly); r=dbaron